extract .fileops.jsonl info
jsmn_typebail 'should' go in jsmn_util.c
  uses new jsmnerr_str, jsmntype_str

need to use new jsmn_nstr for unescaping

--- a/run-fileops/Makefile
+++ b/run-fileops/Makefile
@@ -3,5 +3,7 @@ CFLAGS=-DJSMN_PARENT_LINKS
 
 all: fileops-run-jsonl
 
-fileops-run-jsonl: fileops-run-jsonl.o jsmn/jsmn.o
+fileops-run-jsonl: fileops-run-jsonl.o jsmn/jsmn.o jsmn/jsmn_util.o
 
+jsmn/jsmn.o: jsmn/jsmn.c jsmn/jsmn.h
+jsmn/jsmn_util.o: jsmn/jsmn_util.c jsmn/jsmn_util.h jsmn/jsmn.h
